# Solvity

./: .env.example  .env.ragbot  .env.replit  .gitignore  .replit  ACTION_PLAN.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.ragbot  LAUNCH_GUIDE.md  PRD_RAGBOT_SERVICE.md  README.md  README_RAGBOT.md  REPLIT_DEPLOYMENT.md  SCALING_STRATEGY.md  admin_dashboard.py  admin_dashboard_rag.py  app.py  cached_rag.py  check_models.sh  check_replit.py  debug_rag.py  deploy.sh  deploy_ragbot.sh  deploy_to_github.sh  docker-compose.ragbot.yml  docker-compose.yml  final_rag.py  free_local_test.py  github_auth_setup.sh  gpt_neo_rag_ui.py  install_docker_wsl.sh  install_packages.sh  main_replit.py  modern_rag.py  modern_ui_rag.py  multi_tenant_rag.py  nginx.conf  ollama_rag.py  (+40 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
