[tool.poetry]
name = "ragbot"
version = "1.0.0"
description = "Multi-tenant RAG Service"
authors = ["RAGbot Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
jinja2 = "^3.1.2"
slowapi = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main_replit:main"